--- a/pantryos/pantryos/.README.j2
+++ b/pantryos/pantryos/.README.j2
@@ -2,11 +2,7 @@
 
 [![Release][release-shield]][release] ![Project Stage][project-stage-shield] ![Project Maintenance][maintenance-shield]
 
-[![Discord][discord-shield]][discord] [![Community Forum][forum-shield]][forum]
-
-[![Sponsor Frenck via GitHub Sponsors][github-sponsors-shield]][github-sponsors]
-
-[![Support Frenck on Patreon][patreon-shield]][patreon]
+ [![Community Forum][forum-shield]][forum]
 
 ERP beyond your fridge! A groceries & household management solution for your home.
 
@@ -65,8 +61,6 @@ If you are more interested in stable releases of our add-ons:
 <https://github.com/hassio-addons/repository>
 
 {% endif %}
-[discord-shield]: https://img.shields.io/discord/478094546522079232.svg
-[discord]: https://discord.me/hassioaddons
 [forum-shield]: https://img.shields.io/badge/community-forum-brightgreen.svg
 [forum]: https://community.home-assistant.io/t/home-assistant-community-add-on-pantryos/112422?u=frenck
 [github-sponsors-shield]: https://frenck.dev/wp-content/uploads/2019/12/github_sponsor.png
